fixed scrollbar & change sponsor detail

--- a/assets/css/ollie.css
+++ b/assets/css/ollie.css
@@ -12880,5 +12880,5 @@ pre .code {
 
 ::-webkit-scrollbar-thumb {
   background: #606060;
-  border-radius: 5px;
+  border-radius: 3px;
 }
